--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ html {
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-shadow: 4px 4px 4px #000;
 }
+::selection{
+  background-color: rgba(130, 130, 130, 0.525);
+}
 
 @font-face {
   font-family: "helvetica";
