--- a/src/index.css
+++ b/src/index.css
@@ -180,11 +180,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/placeholder.svg?height=1080&width=1920");
+  background-image: url("../public/home-bg.webp");
   background-size: cover;
   background-position: center;
-  opacity: 0.15;
-  filter: contrast(1.2) brightness(0.7);
+  opacity: 0.25;
+
 }
 
 /* Dynamic hover effects */
